--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         scale="120 120 120"
         gps-entity-place="latitude: 37.192328719543625; longitude: -3.6166337388255263;"
       ></a-text>
-      <a-entity gltf-model="./assets/articuno/scene.gltf" rotation="0 180 0" 
+      <a-entity gltf-model="./articuno/scene.gltf" rotation="0 180 0" 
       scale="0.15 0.15 0.15" gps-entity-place="longitude: 37.192328719543625; latitude: -3.6166337388255263;" animation-mixer/>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
