--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         gps-entity-place="latitude: 37.192328719543625; longitude: -3.6166337388255263;"
       ></a-text>
       <a-entity gltf-model="./articuno/scene.gltf" rotation="0 180 0" 
+      scale="0.15 0.15 0.15" gps-entity-place="longitude: 37.1919859390095; latitude: -3.617169443892168;" animation-mixer/>
+
+      <a-entity gltf-model="./magnemite/scene.gltf" rotation="0 180 0" 
       scale="0.15 0.15 0.15" gps-entity-place="longitude: 37.192328719543625; latitude: -3.6166337388255263;" animation-mixer/>
+
+      <a-entity gltf-model="./dragonite/scene.gltf" rotation="0 180 0" 
+      scale="0.15 0.15 0.15" gps-entity-place="longitude: 37.192115117899725, latitude: -3.616986421217374;" animation-mixer/>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
   </body>
