--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 
       <a-entity gltf-model="./dragonite/scene.gltf" rotation="0 180 0" 
       scale="0.15 0.15 0.15" gps-entity-place="longitude: 37.192115117899725, latitude: -3.616986421217374;" animation-mixer/>
+
+        <a-assets>
+            <img id="my-image" src="./pikachu.jpg">
+        </a-assets>
+      <a-image src="#my-image" width="2" height="1" gps-entity-place="longitude: 37.192283229292876; latitude: -3.6166270982296416"></a-image>
+
       <a-camera gps-camera rotation-reader> </a-camera>
+
+      
     </a-scene>
   </body>
