--- a/index.html
+++ b/index.html
@@ -1,50 +1,94 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>GeoAR.js demo</title>
-    <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
-    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-    <script>
-        THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
-    </script>
-    <script src="./script.js"></script>
-      <style>
-    .buttons {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 5em;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 10;
-    }
+    <html>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>GeoAR.js demo</title>
+        <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
+        <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+        <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+        <script>
+            THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
+        </script>
+          <style>
+        .buttons {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 5em;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          z-index: 10;
+        }
 
-    .say-hi-button {
-      padding: 0.25em;
-      border-radius: 4px;
-      border: none;
-      background: white;
-      color: black;
-      width: 4em;
-      height: 2em;
-    }
-  </style>
-</head>
+        .say-hi-button {
+          padding: 0.25em;
+          border-radius: 4px;
+          border: none;
+          background: white;
+          color: black;
+          width: 4em;
+          height: 2em;
+        }
+      </style>
+    </head>
 
-<body style='margin: 0; overflow: hidden;'>
-    <div class="buttons">
-  <button class="say-hi-button"></button>
-</div>
-    <a-scene
-        vr-mode-ui="enabled: false"
-		embedded
-        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+    <body style='margin: 0; overflow: hidden;'>
+        <div class="buttons">
+            <button class="say-hi-button"></button>
+        </div>
+        <a-scene
+            vr-mode-ui="enabled: false"
+		    embedded
+            arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         
-        <a-camera gps-camera id='camera1' look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' rotation-reader></a-camera>
-	</a-scene>
-</body>
+            <a-camera gps-camera id='camera1' look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' rotation-reader></a-camera>
+	    </a-scene>
+    </body>
+    
+    <script>
+        window.onload = () => {
+            document
+                .querySelector(".say-hi-button")
+                .addEventListener("click", function () {
+                  // here you can change also a-scene or a-entity properties, like
+                  // changing your 3D model source, size, position and so on
+                  // or you can just open links, trigger actions...
+                  cargarModelos();
+                });
+        }
+
+        function cargarModelos() {
+	        //let latitud = 37.19226427531708;
+	        //let longitud = -3.6166251443071054;
+	        let modelos = [
+		        {
+			        latitud: 37.19224427531708,
+			        longitud: -3.6166211443071054,
+			        color: "yellow"
+		        },
+		        {
+			        latitud: 37.19226427531708,
+			        longitud: -3.6166251443071054,
+			        color: "red"
+		        },
+		        {
+			        latitud: 37.192235, 
+                    longitud: -3.616582,
+                    color: "white"
+		        }
+	        ]
+
+	        for(let i = 0; i<modelos.length; i++ ) {
+		        var modelo = document.createElement('a-box');
+		        modelo.setAttribute('material', 'color:'+modelos[i].color);
+		        modelo.setAttribute('scale', '1 1 1');
+		        modelo.setAttribute('gps-entity-place', `latitude: ${modelos[i].latitud}; longitude: ${modelos[i].longitud};`);
+		        let escena = document.querySelector('a-scene');
+		        escena.appendChild(modelo);
+	        }
+        } 
+        </script>
+</html>
