--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		    embedded
             arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         
-            <a-camera gps-camera id='camera1' look-controls-enabled='false' arjs-look-controls='smoothingFactor: 0.1' rotation-reader></a-camera>
+            <a-camera gps-camera rotation-reader></a-camera>
 	    </a-scene>
     </body>
     
@@ -65,13 +65,13 @@
 	        //let longitud = -3.6166251443071054;
 	        let modelos = [
 		        {
-			        latitud: 37.19224427531708,
-			        longitud: -3.6166211443071054,
+			        latitud: 37.192242,
+			        longitud: -3.616585,
 			        color: "yellow"
 		        },
 		        {
-			        latitud: 37.19226427531708,
-			        longitud: -3.6166251443071054,
+			        latitud: 37.192253,
+			        longitud: -3.616600,
 			        color: "red"
 		        },
 		        {
