--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>GeoAR.js demo</title>
-		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-		<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-		<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+<!-- A-Frame itself -->
+<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+
+<!-- Pure three.js code that the A-Frame components use for location-based AR -->
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
+
+<!-- AR.js A-Frame components -->
+<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
 	</head>
 
 	<body style="margin: 0; overflow: hidden">
-		<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: false; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
-			<a-camera gps-new-camera></a-camera>
+		<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+		<a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude: 37.19186917673344; longitude: -3.6168804181496803" scale="10 10 10"></a-entity>	
+		<a-camera gps-new-camera></a-camera>
 		</a-scene>
 	</body>
 
