--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 y: 1,
                 z: 1
             });
-            entity.setAttribute('value', 'hello'' );
+            entity.setAttribute('value', 'hello');
             entity.setAttribute('gps-new-entity-place', {
                 latitude: "37.19186917673344",
                 longitude: "-3.6168804181496803"
