--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
 				{
 					scale: "0.5 0.5 0.5",
 					position: "-10 0 0",
-					latitude: "37.19186648347383",
-					longitude: "-3.6168797495054497",
+					gps: {
+						latitude: "37.19186648347383",
+						longitude: "-3.6168797495054497",ç
+					},
 					width: "3",
 					height: "1.5",
 					source: "fut.jpg"
@@ -163,16 +165,10 @@
 			var ARScene = document.querySelector("a-scene");
 
 			const entity = document.createElement("a-text");
-            entity.setAttribute("scale", {
-                x: 1, 
-                y: 1,
-                z: 1
-            });
-            entity.setAttribute('value', 'hello');
-            entity.setAttribute('gps-new-entity-place', {
-                latitude: "37.19186917673344",
-                longitude: "-3.6168804181496803"
-            });
+            entity.setAttribute("scale", '1 1 1');
+			entity.setAttribute("position", '10 0 0');
+            entity.setAttribute('value', 'Este es el Gymnasio');
+            entity.setAttribute('gps-new-entity-place', 'latitude: 37.19186917673344; longitude: "-3.6168804181496803;');
             document.querySelector("a-scene").appendChild(entity);
 
 			/*for (let i = 0; i < ARText.length; i++) {
