--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					position: "-10 0 0",
 					gps: {
 						latitude: "37.19186648347383",
-						longitude: "-3.6168797495054497",ç
+						longitude: "-3.6168797495054497",
 					},
 					width: "3",
 					height: "1.5",
@@ -165,8 +165,8 @@
 			var ARScene = document.querySelector("a-scene");
 
 			const entity = document.createElement("a-text");
-            entity.setAttribute("scale", '1 1 1');
-			entity.setAttribute("position", '10 0 0');
+            entity.setAttribute("scale", '4 4 4');
+			entity.setAttribute("position", '0 20 0');
             entity.setAttribute('value', 'Este es el Gymnasio');
             entity.setAttribute('gps-new-entity-place', 'latitude: 37.19186917673344; longitude: "-3.6168804181496803;');
             document.querySelector("a-scene").appendChild(entity);
