--- a/index.html
+++ b/index.html
@@ -168,9 +168,12 @@
             entity.setAttribute('value', 'Este es el Gymnasio');
             entity.setAttribute('gps-new-entity-place', "latitude: 37.191861048101266; longitude: -3.616880415410458");
 			entity.setAttribute("look-at", "[gps-new-camera]");
-			entity.setAttribute("color", "green");
+			entity.setAttribute("material", "color: yellow");
+			entity.setAttribute("color", "red");
 			entity.setAttribute("scale", "10 10 10");
 			entity.setAttribute("position", "0 10 0");
+			entity.setAttribute("width", "20");
+			entity.setAttribute("height", "20");
             document.querySelector("a-scene").appendChild(entity);
 
 			/*for (let i = 0; i < ARText.length; i++) {
