--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<body style="margin: 0; overflow: hidden">
 		<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
-		<a-camera gps-new-camera></a-camera>
+		<a-camera id="camaraone" gps-new-camera></a-camera>
 		</a-scene>
 	</body>
 
@@ -167,13 +167,10 @@
 			const entity = document.createElement("a-text");
             entity.setAttribute('value', 'Este es el Gymnasio');
             entity.setAttribute('gps-new-entity-place', "latitude: 37.191861048101266; longitude: -3.616880415410458");
-			entity.setAttribute("look-at", "[gps-new-camera]");
-			entity.setAttribute("material", "color: yellow");
+			entity.setAttribute("look-at", "#camaraone");
 			entity.setAttribute("color", "red");
 			entity.setAttribute("scale", "10 10 10");
 			entity.setAttribute("position", "0 10 0");
-			entity.setAttribute("width", "20");
-			entity.setAttribute("height", "20");
             document.querySelector("a-scene").appendChild(entity);
 
 			/*for (let i = 0; i < ARText.length; i++) {
