--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>GeoAR.js demo</title>
-<!-- A-Frame itself -->
-<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-
-<!-- Pure three.js code that the A-Frame components use for location-based AR -->
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-
-<!-- AR.js A-Frame components -->
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+		<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
+		<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+		<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 	</head>
 
 	<body style="margin: 0; overflow: hidden">
 		<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
-		<a-camera id="camaraone" gps-new-camera></a-camera>
+		<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
 		</a-scene>
 	</body>
 
@@ -26,6 +22,7 @@
 		};
 
 		function cargarModelos() {
+			/*
 			let ARText = [
 				{
 					scale: "0.5 0.5 0.5",
@@ -162,15 +159,17 @@
 				}
 			];
 
+			*/
 			var ARScene = document.querySelector("a-scene");
 
 			const entity = document.createElement("a-text");
             entity.setAttribute('value', 'Este es el Gymnasio');
             entity.setAttribute('gps-new-entity-place', "latitude: 37.191861048101266; longitude: -3.616880415410458");
-			entity.setAttribute("look-at", "#camaraone");
-			entity.setAttribute("color", "red");
-			entity.setAttribute("scale", "10 10 10");
-			entity.setAttribute("position", "0 10 0");
+			entity.setAttribute("look-at", "[gps-new-camera]");
+			entity.setAttribute("color", "green");
+			entity.setAttribute("scale", "20 20 20");
+			entity.setAttribute("position", "0 20 0");
+
             document.querySelector("a-scene").appendChild(entity);
 
 			/*for (let i = 0; i < ARText.length; i++) {
