--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 
 	<body style="margin: 0; overflow: hidden">
-		<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+		<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: false; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
 		<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
 		</a-scene>
 	</body>
@@ -30,13 +30,13 @@
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					color: "green",
-					value: "SALÓN DE ACTOS"
+					value: "SALON DE ACTOS"
 				}, 
 				{
 					scale: "30 30 30",
 					position: "0 10 -10",
-					latitude: "37.19220029643563",
-					longitude: "-3.6165349993048603",
+					latitude: "37.192215393923895",
+					longitude: "-3.616513007858702",
 					color: "green",
 					value: "GIMNASIO DEL AYALA"
 				}, 
@@ -54,7 +54,7 @@
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					color: "green",
-					value: "FP DE INFORMATICA"
+					value: "F.P DE INFORMATICA"
 				}, 
 				{
 					scale: "30 30 30",
