--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 
 	<body style="margin: 0; overflow: hidden">
-		<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: false; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+		<a-scene vr-mode-ui='enabled: false' renderer='antialias: true; alpha: true'>
 		<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
 		</a-scene>
 	</body>
@@ -127,8 +127,8 @@
 				{
 					scale: "0.5 0.5 0.5",
 					position: "-10 0 0",
-					latitude: "37.19220029643563",
-					longitude: "-3.6165349993048603",
+					latitude: "37.192215393923895",
+					longitude: "-3.616513007858702",
 					width: "3",
 					height: "1.5",
 					source: "gym.jpg"
@@ -154,10 +154,8 @@
 				{
 					scale: "0.5 0.5 0.5",
 					position: "-10 0 0",
-					gps: {
-						latitude: "37.19186648347383",
-						longitude: "-3.6168797495054497",
-					},
+					latitude: "37.19186648347383",
+					longitude: "-3.6168797495054497",
 					width: "3",
 					height: "1.5",
 					source: "fut.jpg"
@@ -166,6 +164,10 @@
 
 			
 			var ARScene = document.querySelector("a-scene");
+			let AREntity = document.createElement("a-image");
+			AREntity.setAttribute("src", "fut.jpg");
+			AREntity.setAttribute("gps-new-entity-place", "latitude: 37.19186648347383; longitude: -3.6168797495054497");
+			ARScene.appendChild(AREntity);
 
 
 			for (let i = 0; i < ARText.length; i++) {
