--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 	</head>
 
 	<body style="margin: 0; overflow: hidden">
-		<a-scene vr-mode-ui='enabled: false' renderer='antialias: true; alpha: true'>
-		<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+			<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+			<a-assets>
+				<img id="my-image" src="./fut.jpg">
+			</a-assets>
+			
+			  <!-- Using the asset management system. -->
+			<a-image src="#my-image"></a-image>
+			<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
 		</a-scene>
 	</body>
 
@@ -164,11 +170,6 @@
 
 			
 			var ARScene = document.querySelector("a-scene");
-			let AREntity = document.createElement("a-image");
-			AREntity.setAttribute("src", "fut.jpg");
-			AREntity.setAttribute("gps-new-entity-place", "latitude: 37.19186648347383; longitude: -3.6168797495054497");
-			ARScene.appendChild(AREntity);
-
 
 			for (let i = 0; i < ARText.length; i++) {
 				let AREntity = document.createElement("a-text");
