--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</a-assets>
 			
 			  <!-- Using the asset management system. -->
-			<a-image src="#my-image"></a-image>
+			<a-image gps-new-entity-place="latitude: 37.19186648347383; longitude: -3.6168797495054497" src="#my-image"></a-image>
 			<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
 		</a-scene>
 	</body>
