--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<body style="margin: 0; overflow: hidden">
 			<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
 			<a-assets>
-				<img id="my-image" src="./fut.jpg">
+				<img id="my-image" gps-new-entity-place="latitude: 37.19186648347383; longitude: -3.6168797495054497" src="./fut.jpg">
 			</a-assets>
 			
 			  <!-- Using the asset management system. -->
-			<a-image gps-new-entity-place="latitude: 37.19186648347383; longitude: -3.6168797495054497" src="#my-image"></a-image>
+			<a-image src="#my-image"></a-image>
 			<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
 		</a-scene>
 	</body>
