--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 
 	<body style="margin: 0; overflow: hidden">
-			<a-scene embedded vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+			<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
 			<a-assets>
 				<img id="futim" gps-new-entity-place="latitude: 37.19186648347383; longitude: -3.6168797495054497" src="./fut.jpg">
 			</a-assets>
