--- a/index.html
+++ b/index.html
@@ -4,20 +4,17 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>GeoAR.js demo</title>
-		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+		<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 		<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 		<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
 		<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 	</head>
 
 	<body style="margin: 0; overflow: hidden">
-			<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
-				<a-assets>
-					<img id="ground" src="fut.jpg">
-				  </a-assets>
-			
-				  <a-plane src="#ground" height="100" width="100" rotation="0 0 0"></a-plane>
+		<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
 			<a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+			<a-image src="fut.jpg" height="100" width="100" gps-new-entity-place="latitude: 37.19186648347383; longitude: -3.6168797495054497"></a-image>
+			<a-video src="fotvid.mp4" height="100" width="100" gps-new-entity-place="latitude: 37.19186648347383; longitude: -3.6168797495054497"></a-video>
 		</a-scene>
 	</body>
 
