--- a/index.html
+++ b/index.html
@@ -68,40 +68,40 @@
 
 			let ARVideos = [
 			{
-					width: 20,
-					height: 10,
+					width: "20",
+					height: "10",
 					position: "20 0 20",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					src: "sumvid.mp4"
 				}, 
 				{
-					width: 20,
-					height: 10,
+					width: "20",
+					height: "10",
 					position: "20 0 20",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					src: "gymvid.mp4"
 				}, 
 				{
-					width: 20,
-					height: 10,
+					width: "20",
+					height: "10",
 					position: "20 0 20",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					src: "basketvid.mp4"
 				}, 
 				{
-					width: 20,
-					height: 10,
+					width: "20",
+					height: "10",
 					position: "20 0 20",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					src: "compuvid.mp4"
 				}, 
 				{
-					width: 20,
-					height: 10,
+					width: "20",
+					height: "10",
 					position: "20 0 20",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
@@ -110,41 +110,41 @@
 			];
 
 			let ARImg = [
-			{
-					width: 20,
-					height: 10,
+				{
+					width: "20",
+					height: "10",
 					position: "-20 0 20",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					src: "actos.jpg"
 				}, 
 				{
-					width: 20,
-					height: 10,
+					width: "20",
+					height: "10",
 					position: "-20 0 20",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					src: "gym.jpg"
 				}, 
 				{
-					width: 20,
-					height: 10,
+					width: "20",
+					height: "10",
 					position: "-20 0 20",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					src: "bal.jpg"
 				}, 
 				{
-					width: 20,
-					height: 10,
+					width: "20",
+					height: "10",
 					position: "-20 0 20",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					src: "infor.jpg"
 				}, 
 				{
-					width: 20,
-					height: 10,
+					width: "20",
+					height: "10",
 					position: "-20 0 20",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
