--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 				AREntity.setAttribute("height", ARVideos[i].height);
 				AREntity.setAttribute("src", ARVideos[i].src);
 				AREntity.setAttribute("gps-new-entity-place", "latitude: "+ARVideos[i].latitude+"; longitude: "+ARVideos[i].longitude);
-				ARScene.appendChild(ARVideos);
+				ARScene.appendChild(AREntity);
 			}
 
 			for (let i = 0; i < ARImg.length; i++) {
