--- a/index.html
+++ b/index.html
@@ -67,41 +67,41 @@
 			];
 
 			let ARVideos = [
-			{
-					width: "20",
-					height: "10",
+				{
+					width: "2",
+					height: "1",
 					position: "20 0 20",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					src: "sumvid.mp4"
 				}, 
 				{
-					width: "20",
-					height: "10",
+					width: "2",
+					height: "1",
 					position: "20 0 20",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					src: "gymvid.mp4"
 				}, 
 				{
-					width: "20",
-					height: "10",
+					width: "2",
+					height: "1",
 					position: "20 0 20",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					src: "basketvid.mp4"
 				}, 
 				{
-					width: "20",
-					height: "10",
+					width: "2",
+					height: "1",
 					position: "20 0 20",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					src: "compuvid.mp4"
 				}, 
 				{
-					width: "20",
-					height: "10",
+					width: "2",
+					height: "1",
 					position: "20 0 20",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
@@ -111,40 +111,40 @@
 
 			let ARImg = [
 				{
-					width: "20",
-					height: "10",
+					width: "2",
+					height: "1",
 					position: "-20 0 20",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					src: "actos.jpg"
 				}, 
 				{
-					width: "20",
-					height: "10",
+					width: "2",
+					height: "1",
 					position: "-20 0 20",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					src: "gym.jpg"
 				}, 
 				{
-					width: "20",
-					height: "10",
+					width: "2",
+					height: "1",
 					position: "-20 0 20",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					src: "bal.jpg"
 				}, 
 				{
-					width: "20",
-					height: "10",
+					width: "2",
+					height: "1",
 					position: "-20 0 20",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					src: "infor.jpg"
 				}, 
 				{
-					width: "20",
-					height: "10",
+					width: "2",
+					height: "1",
 					position: "-20 0 20",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
@@ -173,6 +173,7 @@
 				AREntity.setAttribute("width", ARVideos[i].width);
 				AREntity.setAttribute("height", ARVideos[i].height);
 				AREntity.setAttribute("src", ARVideos[i].src);
+				AREntity.setAttribute("look-at", "[gps-new-camera]");
 				AREntity.setAttribute("gps-new-entity-place", "latitude: "+ARVideos[i].latitude+"; longitude: "+ARVideos[i].longitude);
 				ARScene.appendChild(AREntity);
 			}
@@ -183,6 +184,7 @@
 				AREntity.setAttribute("width", ARImg[i].width);
 				AREntity.setAttribute("height", ARImg[i].height);
 				AREntity.setAttribute("src", ARImg[i].src);
+				AREntity.setAttribute("look-at", "[gps-new-camera]");
 				AREntity.setAttribute("gps-new-entity-place", "latitude: "+ARImg[i].latitude+"; longitude: "+ARImg[i].longitude);
 				ARScene.appendChild(AREntity);
 			}
