--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			let ARText = [
 				{
 					scale: "10 10 0",
-					position: "0 10 20",
+					position: "0 20 0",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					color: "green",
@@ -34,7 +34,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "0 10 20",
+					position: "0 20 0",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					color: "green",
@@ -42,7 +42,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "0 10 20",
+					position: "0 20 0",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					color: "green",
@@ -50,7 +50,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "0 10 20",
+					position: "0 20 0",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					color: "green",
@@ -58,7 +58,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "0 10 20",
+					position: "0 20 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					color: "green",
@@ -70,7 +70,7 @@
 				{
 					width: "2",
 					height: "1",
-					position: "20 0 20",
+					position: "0 10 0",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					src: "sumvid.mp4"
@@ -78,7 +78,7 @@
 				{
 					width: "2",
 					height: "1",
-					position: "20 0 20",
+					position: "0 10 0",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					src: "gymvid.mp4"
@@ -86,7 +86,7 @@
 				{
 					width: "2",
 					height: "1",
-					position: "20 0 20",
+					position: "0 10 0",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					src: "basketvid.mp4"
@@ -94,7 +94,7 @@
 				{
 					width: "2",
 					height: "1",
-					position: "20 0 20",
+					position: "0 10 0",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					src: "compuvid.mp4"
@@ -102,7 +102,7 @@
 				{
 					width: "2",
 					height: "1",
-					position: "20 0 20",
+					position: "0 10 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					src: "fotvid.mp4"
@@ -113,7 +113,6 @@
 				{
 					width: "2",
 					height: "1",
-					position: "-20 0 20",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					src: "actos.jpg"
@@ -121,7 +120,6 @@
 				{
 					width: "2",
 					height: "1",
-					position: "-20 0 20",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					src: "gym.jpg"
@@ -129,7 +127,6 @@
 				{
 					width: "2",
 					height: "1",
-					position: "-20 0 20",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					src: "bal.jpg"
@@ -137,7 +134,6 @@
 				{
 					width: "2",
 					height: "1",
-					position: "-20 0 20",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					src: "infor.jpg"
@@ -145,7 +141,6 @@
 				{
 					width: "2",
 					height: "1",
-					position: "-20 0 20",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					src: "fut.jpg"
@@ -172,6 +167,9 @@
 				AREntity.setAttribute("width", ARVideos[i].width);
 				AREntity.setAttribute("height", ARVideos[i].height);
 				AREntity.setAttribute("src", ARVideos[i].src);
+				AREntity.setAttribute("autoplay", "");
+				AREntity.setAttribute("loop", "true");
+				AREntity.setAttribute("look-at", "[gps-new-camera]");
 				AREntity.setAttribute("gps-new-entity-place", "latitude: "+ARVideos[i].latitude+"; longitude: "+ARVideos[i].longitude);
 				ARScene.appendChild(AREntity);
 			}
