--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			
 			let ARText = [
 				{
-					scale: "5 10 0",
+					scale: "10 10 0",
 					position: "0 10 0",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
@@ -33,7 +33,7 @@
 					value: "SALON DE ACTOS"
 				}, 
 				{
-					scale: "5 10 0",
+					scale: "10 10 0",
 					position: "0 10 0",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
@@ -41,7 +41,7 @@
 					value: "GIMNASIO DEL AYALA"
 				}, 
 				{
-					scale: "5 10 0",
+					scale: "10 10 0",
 					position: "0 10 0",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
@@ -49,7 +49,7 @@
 					value: "CANCHA DE BASKET"
 				}, 
 				{
-					scale: "5 10 0",
+					scale: "10 10 0",
 					position: "0 10 0",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
@@ -57,7 +57,7 @@
 					value: "F.P DE INFORMATICA"
 				}, 
 				{
-					scale: "5 10 0",
+					scale: "10 10 0",
 					position: "0 10 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
@@ -111,36 +111,41 @@
 
 			let ARImg = [
 				{
-					width: "2",
-					height: "1",
+					width: "4",
+					height: "2",
+					position: "0 10 0",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					src: "actos.jpg"
 				}, 
 				{
-					width: "2",
-					height: "1",
+					width: "4",
+					height: "2",
+					position: "0 10 0",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					src: "gym.jpg"
 				}, 
 				{
-					width: "2",
-					height: "1",
+					width: "4",
+					height: "2",
+					position: "0 10 0",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					src: "bal.jpg"
 				}, 
 				{
-					width: "2",
-					height: "1",
+					width: "4",
+					height: "2",
+					position: "0 10 0",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					src: "infor.jpg"
 				}, 
 				{
-					width: "2",
-					height: "1",
+					width: "4",
+					height: "2",
+					position: "0 10 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					src: "fut.jpg"
