--- a/index.html
+++ b/index.html
@@ -68,41 +68,41 @@
 
 			let ARVideos = [
 				{
-					width: "2",
-					height: "1",
-					position: "0 10 0",
+					width: "6",
+					height: "3",
+					position: "20 10 0",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					src: "sumvid.mp4"
 				}, 
 				{
-					width: "2",
-					height: "1",
-					position: "0 10 0",
+					width: "6",
+					height: "3",
+					position: "20 10 0",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					src: "gymvid.mp4"
 				}, 
 				{
-					width: "2",
-					height: "1",
-					position: "0 10 0",
+					width: "6",
+					height: "3",
+					position: "20 10 0",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					src: "basketvid.mp4"
 				}, 
 				{
-					width: "2",
-					height: "1",
-					position: "0 10 0",
+					width: "6",
+					height: "3",
+					position: "20 10 0",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					src: "compuvid.mp4"
 				}, 
 				{
-					width: "2",
-					height: "1",
-					position: "0 10 0",
+					width: "6",
+					height: "3",
+					position: "20 10 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					src: "fotvid.mp4"
@@ -169,6 +169,7 @@
 			
 			for (let i = 0; i < ARVideos.length; i++) {
 				let AREntity = document.createElement("a-video");
+				AREntity.setAttribute("position", ARVideos[i].position);
 				AREntity.setAttribute("width", ARVideos[i].width);
 				AREntity.setAttribute("height", ARVideos[i].height);
 				AREntity.setAttribute("src", ARVideos[i].src);
