--- a/index.html
+++ b/index.html
@@ -25,43 +25,43 @@
 			
 			let ARText = [
 				{
-					scale: "5 5 0",
-					position: "100 -10 0",
+					scale: "10 10 0",
+					position: "40 -10 0",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
-					color: "green",
+					color: "yellow",
 					value: "SALON DE ACTOS"
 				}, 
 				{
-					scale: "5 5 0",
-					position: "100 -10 0",
+					scale: "10 10 0",
+					position: "40 -10 0",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
-					color: "green",
+					color: "yellow",
 					value: "GIMNASIO DEL AYALA"
 				}, 
 				{
-					scale: "5 5 0",
-					position: "100 -10 0",
+					scale: "10 10 0",
+					position: "40 -10 0",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
-					color: "green",
+					color: "yellow",
 					value: "CANCHA DE BASKET"
 				}, 
 				{
-					scale: "5 5 0",
-					position: "100 -10 0",
+					scale: "10 10 0",
+					position: "40 -10 0",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
-					color: "green",
+					color: "yellow",
 					value: "F.P DE INFORMATICA"
 				}, 
 				{
-					scale: "5 5 0",
-					position: "100 -10 0",
+					scale: "10 10 0",
+					position: "40 -10 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
-					color: "green",
+					color: "yellow",
 					value: "PISTAS DE FUTBOL"
 				}
 			];
