--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 				AREntity.setAttribute("position", ARText[i].position);
 				AREntity.setAttribute("color", ARText[i].color);
 				AREntity.setAttribute("value", ARText[i].value);
+				AREntity.setAttribute("look-at", "[gps-new-camera]");
 				AREntity.setAttribute("gps-new-entity-place", "latitude: "+ARText[i].latitude+"; longitude: "+ARText[i].longitude);
 				ARScene.appendChild(AREntity);
 			}
