--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "20 5 20",
+					position: "-20 -20 -20",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					color: "yellow",
@@ -116,7 +116,7 @@
 					position: "0 0 0",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
-					src: "actos.jpg"
+					src: "sum.jpg"
 				}, 
 				{
 					width: "12",
@@ -124,7 +124,7 @@
 					position: "0 0 0",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
-					src: "gym.jpg"
+					src: "gym.png"
 				}, 
 				{
 					width: "12",
@@ -132,7 +132,7 @@
 					position: "0 0 0",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
-					src: "bal.jpg"
+					src: "basket.png"
 				}, 
 				{
 					width: "12",
@@ -140,7 +140,7 @@
 					position: "0 0 0",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
-					src: "infor.jpg"
+					src: "infor.png"
 				}, 
 				{
 					width: "12",
@@ -148,7 +148,7 @@
 					position: "0 0 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
-					src: "fut.jpg"
+					src: "fut.png"
 				}
 			];
 
