--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "-10 -10 -10",
+					position: "-100 100 -100",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					color: "yellow",
@@ -157,7 +157,7 @@
 
 			for (let i = 0; i < ARText.length; i++) {
 				let AREntity = document.createElement("a-text");
-				//AREntity.setAttribute("scale", ARText[i].scale);
+				AREntity.setAttribute("scale", ARText[i].scale);
 				AREntity.setAttribute("position", ARText[i].position);
 				AREntity.setAttribute("color", ARText[i].color);
 				AREntity.setAttribute("value", ARText[i].value);
